<resources>
    <!--Get Started Page -->
    <string name="app_name">tradm_but_im_legit_trying_to_do_it</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In.</string>
    <string name="get_started">Get Started.</string>
    <string name="welcome_to">Welcome to\nTRAD\'M!</string>
    <string name="connect_with">Connect with people  people from your\n community and start your trading journey.</string>
    <string name="welcome_to_trad_m">Welcome to TRAD\'M!</string>
    <string name="todo">TODO</string>
    <string name="create_account">Create Account</string>
    <string name="student_id">Student ID</string>
    <string name="email_addr">Email Address</string>
    <string name="password">Password</string>
    <string name="not_a_member">Not a member?</string>
    <string name="create_an_account">Create an Account.</string>
    <string name="log_in">Log In</string>
    <string name="trad_m">TRAD\'M</string>
    <string name="offer_creation">Offer Creation</string>
    <string name="item">Item</string>
    <string name="service">Service</string>
    <string name="name">Name</string>
    <string name="button">Button</string>
    <string name="price">Price</string>
    <string name="krw">KRW</string>

</resources>
