<?xml version="1.0" encoding="UTF-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout tools:context=".MainActivity" android:paddingRight="16dp" android:paddingLeft="16dp" android:background="@drawable/background" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView android:layout_height="38dp" android:layout_width="316dp" app:layout_constraintVertical_bias="0.324" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:fontFamily="@font/proximanova_bold" android:textStyle="bold" android:textSize="30sp" android:textColor="@color/white" android:text="@string/welcome_to_trad_m" android:gravity="center_horizontal" android:id="@+id/welcome"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:fontFamily="@font/proximanova_regular" android:textSize="14sp" android:textColor="@color/white" android:text="@string/connect_with" android:gravity="center_horizontal" android:id="@+id/connectWith" app:layout_constraintTop_toBottomOf="@+id/welcome" android:layout_marginTop="5dp"/>

    <Button android:background="@drawable/rounded_corners" android:layout_height="54dp" android:layout_width="317dp" app:layout_constraintVertical_bias="0.2" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:fontFamily="@font/proximanova_regular" android:textColor="@color/white" android:text="@string/log_in" android:id="@+id/create_acc" app:layout_constraintTop_toBottomOf="@+id/password"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintVertical_bias="0.009" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:fontFamily="@font/proximanova_regular" android:textSize="15sp" android:textColor="@color/white" android:text="@string/not_a_member" android:id="@+id/already_a" app:layout_constraintTop_toBottomOf="@+id/create_acc" android:layout_marginTop="5dp"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.50" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:fontFamily="@font/proximanova_regular" android:textStyle="bold" android:textSize="15sp" android:textColor="@color/white" android:text="@string/create_an_account" android:id="@+id/sign_in" app:layout_constraintTop_toBottomOf="@+id/already_a" android:layout_marginTop="2dp"/>

    <ImageView android:layout_height="121dp" android:layout_width="147dp" app:layout_constraintVertical_bias="0.136" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/imageView" android:contentDescription="@string/todo" app:srcCompat="@drawable/tradm_logo"/>

    <EditText
        android:id="@+id/stud_id"
        android:layout_width="326dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/createacc_login_input_tab"
        android:drawableStart="@drawable/ic_person_outline_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/proximanova_regular"
        android:hint="@string/email_addr"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="#000000"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/lightGray"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectWith" />

    <EditText
        android:id="@+id/password"
        android:layout_width="326dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:background="@drawable/createacc_login_input_tab"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/proximanova_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="#000000"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/lightGray"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stud_id" />

</androidx.constraintlayout.widget.ConstraintLayout>